# syftbox-sdk

./: .bumpversion.cfg  .gitignore  .gitmodules  Cargo.toml  README.md  coverage.sh  manifest.xml  pyproject.toml  syftbox  test.sh
.github/workflows/: ci.yml  coverage.yml  release.yml
python/: Cargo.toml  pyproject.toml
python/examples/: test_sdk.ipynb
python/src/: lib.rs
scripts/: setup-workspace.sh
src/: lib.rs
src/syftbox/: app.rs  control.rs  endpoint.rs  mod.rs  sbc.rs  storage.rs  syc.rs  types.rs
src/syftbox_sdk/: exceptions.py
src/syftbox_sdk/datasets/: dataset.py  utils.py
tests/: embedded_control.rs  multi_recipient_encryption.rs  syftbox_basic.rs
